--- a/src/main/resources/templates/mypage.html
+++ b/src/main/resources/templates/mypage.html
@@ -15,6 +15,7 @@
     <div class="actions">
         <a href="/" class="button home-button">홈으로</a>
         <a href="/member/logout" class="button logout-button">로그아웃</a>
+        <button>회원탈퇴</button>
     </div>
 </div>
 </body>
